# amplifier-bundle-ts-dev

./: .gitignore  README.md  bundle.yaml  pyproject.toml
agents/: nextjs-dev.md  node-dev.md  react-dev.md  ts-dev.md
behaviors/: ts-dev.yaml
context/: NEXTJS_PATTERNS.md  NODEJS_PATTERNS.md  REACT_PATTERNS.md  TS_BEST_PRACTICES.md  ts-dev-instructions.md
docs/: AGENT_BUNDLE_BEST_PRACTICES.md
examples/: ts-delegation-bundle.md
modules/hooks-ts-check/: pyproject.toml
modules/hooks-ts-check/amplifier_module_hooks_ts_check/: __init__.py
modules/tool-ts-check/: pyproject.toml
modules/tool-ts-check/amplifier_module_tool_ts_check/: __init__.py  _core.py
src/amplifier_bundle_ts_dev/: __init__.py  checker.py  config.py  models.py
