[project]
name = "amplifier-bundle-ts-dev"
version = "0.1.0"
description = "Comprehensive TypeScript/JavaScript development tools for Amplifier - code quality, LSP, and expert agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Brian Krabach", email = "bkrabach@microsoft.com" }
]
keywords = [
    "amplifier",
    "typescript",
    "javascript",
    "eslint",
    "prettier",
    "linting",
    "type-checking",
    "code-quality",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[project.urls]
Homepage = "https://github.com/robotdad/amplifier-bundle-ts-dev"
Documentation = "https://github.com/robotdad/amplifier-bundle-ts-dev#readme"
Repository = "https://github.com/robotdad/amplifier-bundle-ts-dev"
Issues = "https://github.com/robotdad/amplifier-bundle-ts-dev/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_bundle_ts_dev"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/modules",
    "/behaviors",
    "/agents",
    "/context",
    "/docs",
    "/bundle.yaml",
    "/README.md",
    "/LICENSE",
]

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "modules"]

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # Line too long (formatter handles this)
    "B008",   # Function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["amplifier_bundle_ts_dev"]
force-single-line = true
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

exclude = [
    "**/.venv",
    "**/node_modules",
    "**/__pycache__",
    "**/build",
    "**/dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
