[project]
name = "amplifier-module-hooks-ts-check"
version = "0.1.0"
description = "Auto-checking hook for TypeScript/JavaScript files in Amplifier"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Microsoft", email = "amplifier@microsoft.com" }]
dependencies = []  # amplifier-core is a peer dependency

[project.entry-points."amplifier.modules"]
hooks-ts-check = "amplifier_module_hooks_ts_check:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_ts_check"]
